refactor: freeze collections once across ir models