@@ -3,17 +3,18 @@ package com.floragunn.searchguard.sgctl.util.mapping.ir.security;
 import org.jspecify.annotations.NonNull;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
 public class Role {
     @NonNull private String name;
-    private List<Application>  applications;
-    private List<String> cluster;
-    private List<RemoteCluster> remoteClusters;
-    private List<Index> indices;
-    private List<RemoteIndex> remoteIndices;
-    private List<String> runAs;
+    private List<Application>  applications = List.of();
+    private List<String> cluster = List.of();
+    private List<RemoteCluster> remoteClusters = List.of();
+    private List<Index> indices = List.of();
+    private List<RemoteIndex> remoteIndices = List.of();
+    private List<String> runAs = List.of();
     private String description;
 
     public Role(@NonNull String name) {
@@ -22,23 +23,23 @@ public class Role {
 
     // Getter-Methods
     public @NonNull String getName() { return name; }
-    public List<Application> getApplications() { return copyOrNull(applications); }
-    public List<String> getCluster() { return copyOrNull(cluster); }
-    public List<Index> getIndices() { return copyOrNull(indices); }
-    public List<String> getRunAs() { return copyOrNull(runAs); }
+    public List<Application> getApplications() { return applications; }
+    public List<String> getCluster() { return cluster; }
+    public List<Index> getIndices() { return indices; }
+    public List<String> getRunAs() { return runAs; }
     public String getDescription() { return description; }
-    public List<RemoteIndex> getRemoteIndices() { return copyOrNull(remoteIndices); }
-    public List<RemoteCluster> getRemoteClusters() { return copyOrNull(remoteClusters); }
+    public List<RemoteIndex> getRemoteIndices() { return remoteIndices; }
+    public List<RemoteCluster> getRemoteClusters() { return remoteClusters; }
 
     // Setter-Methods
     public void setName(@NonNull String name) { this.name = name; }
-    public void setApplications(List<Application> applications) { this.applications = mutableCopy(applications); }
-    public void setCluster(List<String> cluster) { this.cluster = mutableCopy(cluster); }
-    public void setIndices(List<Index> indices) { this.indices = mutableCopy(indices); }
-    public void setRunAs(List<String> runAs) { this.runAs = mutableCopy(runAs); }
+    public void setApplications(List<Application> applications) { this.applications = freezeList(applications); }
+    public void setCluster(List<String> cluster) { this.cluster = freezeList(cluster); }
+    public void setIndices(List<Index> indices) { this.indices = freezeList(indices); }
+    public void setRunAs(List<String> runAs) { this.runAs = freezeList(runAs); }
     public void setDescription(String description) { this.description = description; }
-    public void setRemoteIndices(List<RemoteIndex> remoteIndices) { this.remoteIndices = mutableCopy(remoteIndices); }
-    public void setRemoteClusters(List<RemoteCluster> remoteClusters) { this.remoteClusters = mutableCopy(remoteClusters); }
+    public void setRemoteIndices(List<RemoteIndex> remoteIndices) { this.remoteIndices = freezeList(remoteIndices); }
+    public void setRemoteClusters(List<RemoteCluster> remoteClusters) { this.remoteClusters = freezeList(remoteClusters); }
 
     public static class Application {
         @NonNull private String name;
@@ -47,26 +48,26 @@ public class Role {
 
         public Application(@NonNull String name, @NonNull List<String> privileges, @NonNull List<String> resources) {
             this.name = name;
-            this.privileges = privileges;
-            this.resources = resources;
+            this.privileges = Collections.unmodifiableList(new ArrayList<>(Objects.requireNonNull(privileges)));
+            this.resources = Collections.unmodifiableList(new ArrayList<>(Objects.requireNonNull(resources)));
         }
 
         // Getter-Methods
         public @NonNull String getName() {
             return name;
         }
-        public @NonNull List<String> getPrivileges() { return List.copyOf(privileges); }
-        public @NonNull List<String> getResources() { return List.copyOf(resources); }
+        public @NonNull List<String> getPrivileges() { return privileges; }
+        public @NonNull List<String> getResources() { return resources; }
 
         // Setter-Methods
         public void  setName(@NonNull String name) {
             this.name = name;
         }
         public void  setPrivileges(@NonNull List<String> privileges) {
-            this.privileges = new ArrayList<>(Objects.requireNonNull(privileges));
+            this.privileges = Collections.unmodifiableList(new ArrayList<>(Objects.requireNonNull(privileges)));
         }
         public void  setResources(@NonNull List<String> resources) {
-            this.resources = new ArrayList<>(Objects.requireNonNull(resources));
+            this.resources = Collections.unmodifiableList(new ArrayList<>(Objects.requireNonNull(resources)));
         }
 
         @Override
@@ -76,16 +77,16 @@ public class Role {
     }
 
     public static class RemoteCluster {
-        private List<String> clusters;
-        private List<String> privileges;
+        private List<String> clusters = List.of();
+        private List<String> privileges = List.of();
 
         // Getter-Methods
-        public List<String> getClusters() { return copyOrNull(clusters); }
-        public List<String> getPrivileges() { return copyOrNull(privileges); }
+        public List<String> getClusters() { return clusters; }
+        public List<String> getPrivileges() { return privileges; }
 
         // Setter-Methods
-        public void setClusters(List<String> clusters) { this.clusters = mutableCopy(clusters); }
-        public void setPrivileges(List<String> privileges) { this.privileges = mutableCopy(privileges); }
+        public void setClusters(List<String> clusters) { this.clusters = freezeList(clusters); }
+        public void setPrivileges(List<String> privileges) { this.privileges = freezeList(privileges); }
 
         @Override
         public String toString() {
@@ -103,23 +104,23 @@ public class Role {
         private Boolean allowRestrictedIndices;
 
         public Index(@NonNull List<String> names, @NonNull List<String> privileges, FieldSecurity fieldSecurity, String query, Boolean allowRestrictedIndices) {
-            this.names = names;
-            this.privileges = privileges;
+            this.names = Collections.unmodifiableList(new ArrayList<>(Objects.requireNonNull(names)));
+            this.privileges = Collections.unmodifiableList(new ArrayList<>(Objects.requireNonNull(privileges)));
             this.fieldSecurity = fieldSecurity;
             this.query = query;
             this.allowRestrictedIndices = allowRestrictedIndices;
         }
 
         // Getter-Methods
-        public @NonNull List<String> getNames() { return List.copyOf(names); }
-        public @NonNull List<String> getPrivileges() { return List.copyOf(privileges); }
+        public @NonNull List<String> getNames() { return names; }
+        public @NonNull List<String> getPrivileges() { return privileges; }
         public FieldSecurity getFieldSecurity() { return fieldSecurity; }
         public String getQuery() { return query; }
         public Boolean isAllowRestrictedIndices() { return allowRestrictedIndices; }
 
         // Setter-Methods
-        public void setNames(@NonNull List<String> names) { this.names = new ArrayList<>(Objects.requireNonNull(names)); }
-        public void setPrivileges(@NonNull List<String> privileges) { this.privileges = new ArrayList<>(Objects.requireNonNull(privileges)); }
+        public void setNames(@NonNull List<String> names) { this.names = Collections.unmodifiableList(new ArrayList<>(Objects.requireNonNull(names))); }
+        public void setPrivileges(@NonNull List<String> privileges) { this.privileges = Collections.unmodifiableList(new ArrayList<>(Objects.requireNonNull(privileges))); }
         public void setFieldSecurity(FieldSecurity fieldSecurity) { this.fieldSecurity = fieldSecurity; }
         public void setQuery(String query) { this.query = query; }
         public void setAllowRestrictedIndices(Boolean allowRestrictedIndices) { this.allowRestrictedIndices = allowRestrictedIndices; }
@@ -135,12 +136,12 @@ public class Role {
 
         public RemoteIndex(@NonNull List<String> cluster, @NonNull List<String> names, @NonNull List<String> privileges, FieldSecurity fieldSecurity, String query, Boolean allowRestrictedIndices) {
             super(names, privileges, fieldSecurity, query, allowRestrictedIndices);
-            this.cluster = cluster;
+            this.cluster = Collections.unmodifiableList(new ArrayList<>(Objects.requireNonNull(cluster)));
         }
 
-        public @NonNull List<String> getCluster() { return List.copyOf(cluster); }
+        public @NonNull List<String> getCluster() { return cluster; }
 
-        public void setCluster(@NonNull List<String> cluster) { this.cluster = new ArrayList<>(Objects.requireNonNull(cluster)); }
+        public void setCluster(@NonNull List<String> cluster) { this.cluster = Collections.unmodifiableList(new ArrayList<>(Objects.requireNonNull(cluster))); }
 
         @Override
         public String toString() {
@@ -154,16 +155,16 @@ public class Role {
     }
 
     public static class FieldSecurity {
-        private List<String> except;
-        private List<String> grant;
+        private List<String> except = List.of();
+        private List<String> grant = List.of();
 
         // Getter-Methods
-        public List<String> getExcept() { return copyOrNull(except); }
-        public List<String> getGrant() { return copyOrNull(grant); }
+        public List<String> getExcept() { return except; }
+        public List<String> getGrant() { return grant; }
 
         // Setter-methods
-        public void setExcept(List<String> except) { this.except = mutableCopy(except); }
-        public void setGrant(List<String> grant) { this.grant = mutableCopy(grant); }
+        public void setExcept(List<String> except) { this.except = freezeList(except); }
+        public void setGrant(List<String> grant) { this.grant = freezeList(grant); }
 
         @Override
         public String toString() {
@@ -176,12 +177,11 @@ public class Role {
         return "Role[\n\tname=" + name + "\n\tapplications=" + applications + "\n\tcluster=" + cluster + "\n\tremoteCluster=" + remoteClusters + "\n\tindices=" + indices + "\n\tremote_indices=" + remoteIndices + "\n]";
     }
 
-    private static <T> List<T> copyOrNull(List<T> source) {
-        return source == null ? null : List.copyOf(source);
-    }
-
-    private static <T> List<T> mutableCopy(List<T> source) {
-        return source == null ? null : new ArrayList<>(source);
+    private static <T> List<T> freezeList(List<T> source) {
+        if (source == null || source.isEmpty()) {
+            return List.of();
+        }
+        return Collections.unmodifiableList(new ArrayList<>(source));
     }
 
     @Override
